--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -92,7 +92,10 @@ jobs:
           while IFS= read -r file; do
             echo "File: $file"
             echo repos/$REPO_OWNER/$REPO_NAME/contents/$file?ref=$BRANCH
-            gh api repos/$REPO_OWNER/$REPO_NAME/contents/$file?ref=$BRANCH --jq '.content'
+            mkdir pr-branch
+            cd pr-branch
+            gh api repos/$REPO_OWNER/$REPO_NAME/contents/$file?ref=$BRANCH --jq '.content' | base64 -d > "$file.txt"
+            cat "$file.txt"
           done < changed_files.txt
 
           if grep -Fxq "src/main/resources/messages_en_GB.properties" changed_files.txt; then
