--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -96,9 +96,12 @@ jobs:
             echo repos/$REPO_OWNER/$REPO_NAME/contents/$file?ref=$BRANCH
             mkdir -p "pr-branch/$(dirname "$file")"
             gh api repos/$REPO_OWNER/$REPO_NAME/contents/$file?ref=$BRANCH --jq '.content' | base64 -d > "pr-branch/$(basename "$file")"
-            cat "pr-branch/$(basename "$file")"
+            # cat "pr-branch/$(basename "$file")"
           done < changed_files.txt
 
+          ls -la pr-branch/
+          ls -la pr-branch/src/
+          ls -la pr-branch/src/main/
           ls -la pr-branch/src/main/resources/
 
           if grep -Fxq "src/main/resources/messages_en_GB.properties" changed_files.txt; then
