--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -135,7 +135,7 @@ jobs:
           python .github/scripts/check_language_properties.py \
             --actor ${{ github.event.pull_request.user.login }} \
             --reference-file "${REFERENCE_FILE}" \
-            --branch "" \
+            --branch "pr-branch" \
             --files "${FILES_LIST[@]}" > result.txt || true
 
       - name: Capture output
