--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -109,7 +109,7 @@ jobs:
           echo "Changed files: ${FILES_LIST_STR}"
 
           echo file_list.txt
-          cat file_list.txt
+          cat FILES_LIST
 
           if grep -Fxq "src/main/resources/messages_en_GB.properties" changed_files.txt; then
               echo "Using PR branch reference file"
