--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -5,11 +5,11 @@ on:
     types: [opened, synchronize, reopened]
     paths:
       - "src/main/resources/messages_*.properties"
-      - ".github/workflows/check_prop.yml"
+      - ".github/workflows/check_prop.yml" # Include the workflow file itself
 
 permissions:
-  contents: read
-  issues: write
+  contents: read # Allow read access to repository content
+  issues: write # Allow posting comments on issues/PRs
 
 jobs:
   check-files:
@@ -36,11 +36,11 @@ jobs:
         run: |
           echo "Fetching PR changed files..."
 
-          gh repo set-default ${{ github.event.pull_request.head.repo.full_name }}
+          gh repo set-default ${{ github.event.pull_request.head.repo.full_name }} # Set the fork repository as default
 
-          # Store files in a safe way, only allowing valid properties files
+          # Fetch the list of changed files in the PR
           echo "Getting list of changed files from PR..."
-          gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]+\.properties$' > changed_files.txt
+          gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]+\.properties$' > changed_files.txt # Filter only matching property files
 
       - name: Determine reference file
         id: determine-file
@@ -48,40 +48,42 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "Determining reference file..."
-          REPO_OWNER=$(gh pr view ${{ github.event.pull_request.number }} --json author -q '.author.login')
-          REPO_NAME=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.name')
-          BRANCH=$(gh pr view ${{ github.event.pull_request.number }} --json headRefName -q '.headRefName')
+          REPO_OWNER=$(gh pr view ${{ github.event.pull_request.number }} --json author -q '.author.login') # Get PR author's username
+          REPO_NAME=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.name') # Get PR repository name
+          BRANCH=$(gh pr view ${{ github.event.pull_request.number }} --json headRefName -q '.headRefName') # Get PR branch name
 
-          mkdir -p pr-branch
+          mkdir -p pr-branch # Create a directory for PR files
 
-          # Zeige den Inhalt der Dateien
+          # Download the content of each changed file
           while IFS= read -r file; do
-            mkdir -p "pr-branch/$(dirname "$file")"
-            gh api repos/$REPO_OWNER/$REPO_NAME/contents/$file?ref=$BRANCH --jq '.content' | base64 -d > "pr-branch/src/main/resources/$(basename "$file")"
+            mkdir -p "pr-branch/$(dirname "$file")" # Create directories for files
+            gh api repos/$REPO_OWNER/$REPO_NAME/contents/$file?ref=$BRANCH --jq '.content' | base64 -d > "pr-branch/src/main/resources/$(basename "$file")" # Save decoded file content
           done < changed_files.txt
 
+          # Generate a list of files without the "pr-branch/" prefix
           find pr-branch/ -type f | awk -F'pr-branch/' '{print $2}' > file_list.txt
 
-          mapfile -t FILES_LIST < file_list.txt
-          FILES_LIST_STR="${FILES_LIST[*]}"
-          echo "FILES_LIST=${FILES_LIST_STR}" >> $GITHUB_ENV
+          mapfile -t FILES_LIST < file_list.txt # Read the file list into an array
+          FILES_LIST_STR="${FILES_LIST[*]}" # Join array into a space-separated string
+          echo "FILES_LIST=${FILES_LIST_STR}" >> $GITHUB_ENV # Export the file list to the environment
           echo "Changed files: ${FILES_LIST_STR}"
 
-          cat file_list.txt
+          cat file_list.txt # Display the file list
 
+          # Determine which reference file to use
           if grep -Fxq "src/main/resources/messages_en_GB.properties" changed_files.txt; then
               echo "Using PR branch reference file"
               REFERENCE_FILE="pr-branch-messages_en_GB.properties"
               gh api repos/$REPO_OWNER/$REPO_NAME/contents/src/main/resources/messages_en_GB.properties?ref=${{ github.event.pull_request.head.ref }} \
-                --jq '.content' | base64 -d > $REFERENCE_FILE
+                --jq '.content' | base64 -d > $REFERENCE_FILE # Save PR branch reference file
           else
               echo "Using main branch reference file"
               REFERENCE_FILE="main-branch-messages_en_GB.properties"
               gh api repos/Ludy87/test_java/contents/src/main/resources/messages_en_GB.properties?ref=main \
-                --jq '.content' | base64 -d > $REFERENCE_FILE
+                --jq '.content' | base64 -d > $REFERENCE_FILE # Save main branch reference file
           fi
 
-          echo "REFERENCE_FILE=$REFERENCE_FILE" >> $GITHUB_ENV
+          echo "REFERENCE_FILE=$REFERENCE_FILE" >> $GITHUB_ENV # Export reference file path to the environment
 
       - name: Run Python script to check files
         id: run-check
@@ -104,7 +106,7 @@ jobs:
             echo "EOF" >> $GITHUB_ENV
             echo "${SCRIPT_OUTPUT}"
 
-            # Set FAIL_JOB to true if SCRIPT_OUTPUT contains ❌
+            # Determine job failure based on script output
             if [[ "$SCRIPT_OUTPUT" == *"❌"* ]]; then
               echo "FAIL_JOB=true" >> $GITHUB_ENV
             else
@@ -134,7 +136,7 @@ jobs:
 
             const comment = comments.data.find(c => c.body.includes("## 🚀 Translation Verification Summary"));
 
-            // Only allow the action user to update comments
+            // Only update or create comments by the action user
             const expectedActor = "github-actions[bot]";
 
             if (comment && comment.user.login === expectedActor) {
