--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -116,7 +116,8 @@ jobs:
             --actor ${{ github.event.pull_request.user.login }} \
             --reference-file "${REFERENCE_FILE}" \
             --branch "pr-branch" \
-            --files "${FILES_LIST[@]}" > result.txt || true
+            --files "${FILES_LIST[@]}" > result.txt
+        continue-on-error: true # Continue the job even if this step fails
 
       - name: Capture output
         id: capture-output
