--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -15,6 +15,10 @@ jobs:
   check-files:
     if: github.event_name == 'pull_request_target'
     runs-on: ubuntu-latest
+    permissions:
+      contents: read # Allow read access to repository content
+      issues: write # Allow posting comments on issues/PRs
+      pull-requests: write # Allow posting comments on issues/PRs
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
@@ -50,6 +54,7 @@ jobs:
             const prNumber = context.payload.issue.number;
             console.log(`PR Number: ${prNumber}`);
             core.setOutput("pr_number", prNumber);
+        continue-on-error: true
 
       - name: Get PR repository and ref
         id: get-pr-info
@@ -74,6 +79,7 @@ jobs:
 
             core.setOutput('repository', repository);
             core.setOutput('ref', pr.head.ref);
+        continue-on-error: true
 
       - name: Determine reference file
         id: determine-file
