--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -51,7 +51,7 @@ jobs:
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
-            const prNumber = context.event.number;
+            const prNumber = context.event.pull_request.number;
             console.log(`PR Number: ${prNumber}`);
             core.setOutput("pr_number", prNumber);
         continue-on-error: true
