--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -82,9 +82,11 @@ jobs:
         continue-on-error: true
       - name: Determine reference file test
         id: determine-file-1
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        uses: actions/github-script@v7
         with:
           script: |
+            const core = require("@actions/core");
+            const github = require("@actions/github");
             const prNumber = context.payload.pull_request.number;
             const repoOwner = context.payload.repository.owner.login;
             const repoName = context.payload.repository.name;
