--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -85,15 +85,11 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const github = require("@actions/github");
             const prNumber = context.payload.pull_request.number;
             const repoOwner = context.payload.repository.owner.login;
             const repoName = context.payload.repository.name;
 
             console.log(`Determining reference file for PR #${prNumber}`);
-
-            const ghToken = process.env.GH_TOKEN;
-            const octokit = github.getOctokit(ghToken);
 
             // Validate inputs
             const validateInput = (input, regex, name) => {
@@ -113,7 +109,7 @@ jobs:
             console.log(`Branch: ${branch}`);
 
             // Get changed files
-            const { data: files } = await octokit.rest.pulls.listFiles({
+            const { data: files } = await github.rest.pulls.listFiles({
               owner: repoOwner,
               repo: repoName,
               pull_number: prNumber,
@@ -136,7 +132,7 @@ jobs:
             let referenceFilePath;
             if (changedFiles.includes("src/main/resources/messages_en_GB.properties")) {
               console.log("Using PR branch reference file.");
-              const { data: fileContent } = await octokit.rest.repos.getContent({
+              const { data: fileContent } = await github.rest.repos.getContent({
                 owner: repoOwner,
                 repo: repoName,
                 path: "src/main/resources/messages_en_GB.properties",
@@ -148,7 +144,7 @@ jobs:
               require("fs").writeFileSync(referenceFilePath, content);
             } else {
               console.log("Using main branch reference file.");
-              const { data: fileContent } = await octokit.rest.repos.getContent({
+              const { data: fileContent } = await github.rest.repos.getContent({
                 owner: "Ludy87",
                 repo: "test_java",
                 path: "src/main/resources/messages_en_GB.properties",
