--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -160,71 +160,71 @@ jobs:
             core.exportVariable("REFERENCE_FILE", referenceFilePath);
 
 
-      - name: Determine reference file
-        id: determine-file
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo "Determining reference file..."
-          REPO_OWNER=$(printf "%q" "$(gh pr view ${{ github.event.pull_request.number }} --json author -q '.author.login')")
-          REPO_NAME=$(printf "%q" "$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.name')")
-          BRANCH=$(printf "%q" "$(gh pr view ${{ github.event.pull_request.number }} --json headRefName -q '.headRefName')")
+      # - name: Determine reference file
+      #   id: determine-file
+      #   env:
+      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: |
+      #     echo "Determining reference file..."
+      #     REPO_OWNER=$(printf "%q" "$(gh pr view ${{ github.event.pull_request.number }} --json author -q '.author.login')")
+      #     REPO_NAME=$(printf "%q" "$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.name')")
+      #     BRANCH=$(printf "%q" "$(gh pr view ${{ github.event.pull_request.number }} --json headRefName -q '.headRefName')")
 
-          echo $REPO_OWNER
-          echo $REPO_NAME
-          echo $BRANCH
-          if [[ ! "$REPO_OWNER" =~ ^[a-zA-Z0-9_-]+$ ]]; then
-            echo "Invalid repository owner: $REPO_OWNER"
-            exit 1
-          fi
+      #     echo $REPO_OWNER
+      #     echo $REPO_NAME
+      #     echo $BRANCH
+      #     if [[ ! "$REPO_OWNER" =~ ^[a-zA-Z0-9_-]+$ ]]; then
+      #       echo "Invalid repository owner: $REPO_OWNER"
+      #       exit 1
+      #     fi
 
-          if [[ ! "$REPO_NAME" =~ ^[a-zA-Z0-9._-]+$ ]]; then
-            echo "Invalid repository name: $REPO_NAME"
-            exit 1
-          fi
+      #     if [[ ! "$REPO_NAME" =~ ^[a-zA-Z0-9._-]+$ ]]; then
+      #       echo "Invalid repository name: $REPO_NAME"
+      #       exit 1
+      #     fi
 
-          if [[ ! "$BRANCH" =~ ^[a-zA-Z0-9._/-]+$ ]]; then
-            echo "Invalid branch name: $BRANCH"
-            exit 1
-          fi
+      #     if [[ ! "$BRANCH" =~ ^[a-zA-Z0-9._/-]+$ ]]; then
+      #       echo "Invalid branch name: $BRANCH"
+      #       exit 1
+      #     fi
 
-          mkdir -p pr-branch # Create a directory for PR files
+      #     mkdir -p pr-branch # Create a directory for PR files
 
-          # Download the content of each changed file
-          while IFS= read -r file; do
-            if [[ "$file" =~ ^src/main/resources/messages_[a-zA-Z_]+\.properties$ ]]; then
-              mkdir -p "pr-branch/$(dirname "$file")" # Create directories for files
-              gh api repos/$REPO_OWNER/$REPO_NAME/contents/$file?ref=$BRANCH --jq '.content' | base64 -d > "pr-branch/src/main/resources/$(basename "$file")" # Save decoded file content
-            else
-              echo "Invalid file path detected: $file"
-              exit 1
-            fi
-          done < changed_files.txt
+      #     # Download the content of each changed file
+      #     while IFS= read -r file; do
+      #       if [[ "$file" =~ ^src/main/resources/messages_[a-zA-Z_]+\.properties$ ]]; then
+      #         mkdir -p "pr-branch/$(dirname "$file")" # Create directories for files
+      #         gh api repos/$REPO_OWNER/$REPO_NAME/contents/$file?ref=$BRANCH --jq '.content' | base64 -d > "pr-branch/src/main/resources/$(basename "$file")" # Save decoded file content
+      #       else
+      #         echo "Invalid file path detected: $file"
+      #         exit 1
+      #       fi
+      #     done < changed_files.txt
 
-          # Generate a list of files without the "pr-branch/" prefix
-          find pr-branch/ -type f | awk -F'pr-branch/' '{print $2}' > file_list.txt
+      #     # Generate a list of files without the "pr-branch/" prefix
+      #     find pr-branch/ -type f | awk -F'pr-branch/' '{print $2}' > file_list.txt
 
-          mapfile -t FILES_LIST < file_list.txt # Read the file list into an array
-          FILES_LIST_STR="${FILES_LIST[*]}" # Join array into a space-separated string
-          echo "FILES_LIST=${FILES_LIST_STR}" >> $GITHUB_ENV # Export the file list to the environment
-          echo "Changed files: ${FILES_LIST_STR}"
+      #     mapfile -t FILES_LIST < file_list.txt # Read the file list into an array
+      #     FILES_LIST_STR="${FILES_LIST[*]}" # Join array into a space-separated string
+      #     echo "FILES_LIST=${FILES_LIST_STR}" >> $GITHUB_ENV # Export the file list to the environment
+      #     echo "Changed files: ${FILES_LIST_STR}"
 
-          cat file_list.txt # Display the file list
+      #     cat file_list.txt # Display the file list
 
-          # Determine which reference file to use
-          if grep -Fxq "src/main/resources/messages_en_GB.properties" changed_files.txt; then
-              echo "Using PR branch reference file"
-              REFERENCE_FILE="pr-branch-messages_en_GB.properties"
-              gh api repos/$REPO_OWNER/$REPO_NAME/contents/src/main/resources/messages_en_GB.properties?ref=${{ github.event.pull_request.head.ref }} \
-                --jq '.content' | base64 -d > $REFERENCE_FILE # Save PR branch reference file
-          else
-              echo "Using main branch reference file"
-              REFERENCE_FILE="main-branch-messages_en_GB.properties"
-              gh api repos/Ludy87/test_java/contents/src/main/resources/messages_en_GB.properties?ref=main \
-                --jq '.content' | base64 -d > $REFERENCE_FILE # Save main branch reference file
-          fi
+      #     # Determine which reference file to use
+      #     if grep -Fxq "src/main/resources/messages_en_GB.properties" changed_files.txt; then
+      #         echo "Using PR branch reference file"
+      #         REFERENCE_FILE="pr-branch-messages_en_GB.properties"
+      #         gh api repos/$REPO_OWNER/$REPO_NAME/contents/src/main/resources/messages_en_GB.properties?ref=${{ github.event.pull_request.head.ref }} \
+      #           --jq '.content' | base64 -d > $REFERENCE_FILE # Save PR branch reference file
+      #     else
+      #         echo "Using main branch reference file"
+      #         REFERENCE_FILE="main-branch-messages_en_GB.properties"
+      #         gh api repos/Ludy87/test_java/contents/src/main/resources/messages_en_GB.properties?ref=main \
+      #           --jq '.content' | base64 -d > $REFERENCE_FILE # Save main branch reference file
+      #     fi
 
-          echo "REFERENCE_FILE=$REFERENCE_FILE" >> $GITHUB_ENV # Export reference file path to the environment
+      #     echo "REFERENCE_FILE=$REFERENCE_FILE" >> $GITHUB_ENV # Export reference file path to the environment
 
       - name: Run Python script to check files
         id: run-check
