--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -111,10 +111,7 @@ jobs:
             core.setOutput('branch', branch);
 
             // Get PR data and specific commit
-            const prNumber = github.context.payload.pull_request.number;
-            const repoOwner = github.context.payload.repository.owner.login;
-            const repoName = github.context.payload.repository.name;
-            const commitSha = github.context.payload.pull_request.head.sha;
+            const commitSha = context.payload.pull_request.head.sha;
 
             console.log(`PR Number: ${prNumber}`);
             console.log(`Commit SHA: ${commitSha}`);
