--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -135,8 +135,37 @@ jobs:
 
             console.log("Changed files:", changedFiles);
 
+            // Create a temporary directory for PR files
+            const tempDir = "pr-branch";
+            if (!fs.existsSync(tempDir)) {
+              fs.mkdirSync(tempDir, { recursive: true });
+            }
+
+            // Download and save each changed file
+            for (const file of changedFiles) {
+              const { data: fileContent } = await github.rest.repos.getContent({
+                owner: repoOwner,
+                repo: repoName,
+                path: file,
+                ref: branch,
+              });
+
+              const content = Buffer.from(fileContent.content, "base64").toString("utf-8");
+              const filePath = `${tempDir}/${file}`;
+              const dirPath = require("path").dirname(filePath);
+
+              if (!fs.existsSync(dirPath)) {
+                fs.mkdirSync(dirPath, { recursive: true });
+              }
+
+              fs.writeFileSync(filePath, content);
+              console.log(`Saved file: ${filePath}`);
+            }
+
+            // Output the list of changed files for further processing
             const fileList = changedFiles.join(" ");
             core.exportVariable("FILES_LIST", fileList);
+            console.log("Files saved and listed in FILES_LIST.");
 
             // Determine reference file
             let referenceFilePath;
@@ -243,7 +272,7 @@ jobs:
           python .github/scripts/check_language_properties.py \
             --actor ${{ github.event.pull_request.user.login }} \
             --reference-file "${REFERENCE_FILE}" \
-            --branch "" \
+            --branch "pr-branch" \
             --files "${FILES_LIST[@]}" > result.txt
         continue-on-error: true # Continue the job even if this step fails
 
