--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -52,45 +52,29 @@ jobs:
         with:
           script: |
             const prNumber = context.payload.pull_request.number;
+            const repoOwner = context.payload.repository.owner.login;
+            const repoName = context.payload.repository.name;
+            const branch = context.payload.pull_request.head.ref;
+
             console.log(`PR Number: ${prNumber}`);
+            console.log(`Repo Owner: ${repoOwner}`);
+            console.log(`Repo Name: ${repoName}`);
+            console.log(`Branch: ${branch}`);
+
             core.setOutput("pr_number", prNumber);
-        continue-on-error: true
-
-      - name: Get PR repository and ref
-        id: get-pr-info
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-        env:
-          PR_NUMBER: ${{ steps.get-pr-data.outputs.pr_number }}
-        with:
-          script: |
-            console.log(${{ steps.get-pr-data.outputs.pr_number }})
-            console.log("$PR_NUMBER")
-            const { owner, repo } = context.repo;
-            const prNumber = context.payload.pull_request.number;
-
-            const { data: pr } = await github.rest.pulls.get({
-              owner,
-              repo,
-              pull_number: prNumber,
-            });
-
-            // For forks, use the full repository name, for internal PRs use the current repo
-            const repository = pr.head.repo.fork ? pr.head.repo.full_name : `${owner}/${repo}`;
-
-            console.log(`PR Repository: ${repository}`);
-            console.log(`PR Branch: ${pr.head.ref}`);
-
-            core.setOutput('repository', repository);
-            core.setOutput('ref', pr.head.ref);
+            core.setOutput("repo_owner", repoOwner);
+            core.setOutput("repo_name", repoName);
+            core.setOutput("branch", branch);
         continue-on-error: true
       - name: Determine reference file test
         id: determine-file-1
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
-            const prNumber = context.payload.pull_request.number;
-            const repoOwner = context.payload.repository.owner.login;
-            const repoName = context.payload.repository.name;
+            const prNumber = ${{ steps.get-pr-data.outputs.pr_number }};
+            const repoOwner = ${{ steps.get-pr-data.outputs.repo_owner }};
+            const repoName = ${{ steps.get-pr-data.outputs.repo_name }};
+            const branch = ${{ steps.get-pr-data.outputs.branch }};
 
             console.log(`Determining reference file for PR #${prNumber}`);
 
@@ -101,19 +85,9 @@ jobs:
               }
             };
 
-            const branch = context.payload.pull_request.head.ref;
-
             validateInput(repoOwner, /^[a-zA-Z0-9_-]+$/, "repository owner");
             validateInput(repoName, /^[a-zA-Z0-9._-]+$/, "repository name");
             validateInput(branch, /^[a-zA-Z0-9._/-]+$/, "branch name");
-
-            console.log(`Repo owner: ${repoOwner}`);
-            console.log(`Repo name: ${repoName}`);
-            console.log(`Branch: ${branch}`);
-
-            core.setOutput('branch', branch);
-
-            console.log(`PR Number: ${prNumber}`);
 
             // Get the list of changed files in the PR
             const { data: files } = await github.rest.pulls.listFiles({
@@ -191,73 +165,6 @@ jobs:
 
             console.log(`Reference file path: ${referenceFilePath}`);
             core.exportVariable("REFERENCE_FILE", referenceFilePath);
-
-
-      # - name: Determine reference file
-      #   id: determine-file
-      #   env:
-      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: |
-      #     echo "Determining reference file..."
-      #     REPO_OWNER=$(printf "%q" "$(gh pr view ${{ github.event.pull_request.number }} --json author -q '.author.login')")
-      #     REPO_NAME=$(printf "%q" "$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.name')")
-      #     BRANCH=$(printf "%q" "$(gh pr view ${{ github.event.pull_request.number }} --json headRefName -q '.headRefName')")
-
-      #     echo $REPO_OWNER
-      #     echo $REPO_NAME
-      #     echo $BRANCH
-      #     if [[ ! "$REPO_OWNER" =~ ^[a-zA-Z0-9_-]+$ ]]; then
-      #       echo "Invalid repository owner: $REPO_OWNER"
-      #       exit 1
-      #     fi
-
-      #     if [[ ! "$REPO_NAME" =~ ^[a-zA-Z0-9._-]+$ ]]; then
-      #       echo "Invalid repository name: $REPO_NAME"
-      #       exit 1
-      #     fi
-
-      #     if [[ ! "$BRANCH" =~ ^[a-zA-Z0-9._/-]+$ ]]; then
-      #       echo "Invalid branch name: $BRANCH"
-      #       exit 1
-      #     fi
-
-      #     mkdir -p pr-branch # Create a directory for PR files
-
-      #     # Download the content of each changed file
-      #     while IFS= read -r file; do
-      #       if [[ "$file" =~ ^src/main/resources/messages_[a-zA-Z_]+\.properties$ ]]; then
-      #         mkdir -p "pr-branch/$(dirname "$file")" # Create directories for files
-      #         gh api repos/$REPO_OWNER/$REPO_NAME/contents/$file?ref=$BRANCH --jq '.content' | base64 -d > "pr-branch/src/main/resources/$(basename "$file")" # Save decoded file content
-      #       else
-      #         echo "Invalid file path detected: $file"
-      #         exit 1
-      #       fi
-      #     done < changed_files.txt
-
-      #     # Generate a list of files without the "pr-branch/" prefix
-      #     find pr-branch/ -type f | awk -F'pr-branch/' '{print $2}' > file_list.txt
-
-      #     mapfile -t FILES_LIST < file_list.txt # Read the file list into an array
-      #     FILES_LIST_STR="${FILES_LIST[*]}" # Join array into a space-separated string
-      #     echo "FILES_LIST=${FILES_LIST_STR}" >> $GITHUB_ENV # Export the file list to the environment
-      #     echo "Changed files: ${FILES_LIST_STR}"
-
-      #     cat file_list.txt # Display the file list
-
-      #     # Determine which reference file to use
-      #     if grep -Fxq "src/main/resources/messages_en_GB.properties" changed_files.txt; then
-      #         echo "Using PR branch reference file"
-      #         REFERENCE_FILE="pr-branch-messages_en_GB.properties"
-      #         gh api repos/$REPO_OWNER/$REPO_NAME/contents/src/main/resources/messages_en_GB.properties?ref=${{ github.event.pull_request.head.ref }} \
-      #           --jq '.content' | base64 -d > $REFERENCE_FILE # Save PR branch reference file
-      #     else
-      #         echo "Using main branch reference file"
-      #         REFERENCE_FILE="main-branch-messages_en_GB.properties"
-      #         gh api repos/Ludy87/test_java/contents/src/main/resources/messages_en_GB.properties?ref=main \
-      #           --jq '.content' | base64 -d > $REFERENCE_FILE # Save main branch reference file
-      #     fi
-
-      #     echo "REFERENCE_FILE=$REFERENCE_FILE" >> $GITHUB_ENV # Export reference file path to the environment
 
       - name: Run Python script to check files
         id: run-check
