--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -37,6 +37,8 @@ jobs:
         run: |
           echo "Fetching PR changed files..."
 
+          gh repo view "${{ github.event.pull_request.head.repo.full_name }}"
+
           gh repo set-default "${{ github.event.pull_request.head.repo.full_name }}" # Set the fork repository as default
 
           # Fetch the list of changed files in the PR
