--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -39,7 +39,7 @@ jobs:
 
           gh repo view "${{ github.event.pull_request.head.repo.full_name }}"
 
-          gh repo set-default "${{ github.event.pull_request.head.repo.full_name }}" # Set the fork repository as default
+          # gh repo set-default "${{ github.event.pull_request.head.repo.full_name }}" # Set the fork repository as default
 
           # Fetch the list of changed files in the PR
           echo "Getting list of changed files from PR..."
