--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           echo "Fetching PR changed files..."
 
-          gh repo view --repo "${{ github.event.pull_request.head.repo.full_name }}" --branch "${{ steps.get-pr-data.outputs.branch }}"
+          gh repo view "${{ github.event.pull_request.head.repo.full_name }}" --branch "${{ steps.get-pr-data.outputs.branch }}"
 
           # gh repo set-default "${{ github.event.pull_request.head.repo.full_name }}" # Set the fork repository as default
 
