--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       issues: write # Allow posting comments on issues/PRs
+      pull-requests: write # Allow posting comments on issues/PRs
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
