--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -60,6 +60,7 @@ jobs:
           echo "Fetching PR changed files..."
 
           echo "${{ github.event.pull_request.head.repo.full_name }}"
+          echo "${{ github.event.pull_request.head.repo.owner }}"
 
           gh repo view "${{ github.event.pull_request.head.repo.full_name }}" --branch "${{ steps.get-pr-data.outputs.branch }}"
 
