--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -59,9 +59,11 @@ jobs:
         run: |
           echo "Fetching PR changed files..."
 
-          echo "${{ github.event.pull_request.head.repo.full_name }}"
           echo "${{ github.event.pull_request.head.repo.owner.login }}"
+          core.setOutput("pr_repo_owner", "${{ github.event.pull_request.head.repo.owner.login }}");
+
           echo "${{ github.event.pull_request.head.repo.name }}"
+          core.setOutput("pr_repo_name", ${{ github.event.pull_request.head.repo.name }}");
 
           gh repo view "${{ github.event.pull_request.head.repo.full_name }}" --branch "${{ steps.get-pr-data.outputs.branch }}"
 
@@ -69,7 +71,7 @@ jobs:
 
           # Fetch the list of changed files in the PR
           echo "Getting list of changed files from PR..."
-          gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]+\.properties$' > changed_files.txt # Filter only matching property files
+          gh pr view ${{ steps.get-pr-data.outputs.pr_number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]+\.properties$' > changed_files.txt # Filter only matching property files
 
       - name: Determine reference file test
         id: determine-file-1
@@ -79,6 +81,9 @@ jobs:
             const prNumber = ${{ steps.get-pr-data.outputs.pr_number }};
             const repoOwner = "${{ steps.get-pr-data.outputs.repo_owner }}";
             const repoName = "${{ steps.get-pr-data.outputs.repo_name }}";
+
+            const prRepoOwner = "${{ steps.get-pr-data.outputs.pr_repo_owner }}";
+            const prRepoName = "${{ steps.get-pr-data.outputs.pr_repo_name }}";
             const branch = "${{ steps.get-pr-data.outputs.branch }}";
 
             console.log(`Determining reference file for PR #${prNumber}`);
@@ -96,8 +101,8 @@ jobs:
 
             // Get the list of changed files in the PR
             const { data: files } = await github.rest.pulls.listFiles({
-              owner: repoOwner,
-              repo: repoName,
+              owner: prRepoOwner,
+              repo: prRepoName,
               pull_number: prNumber,
             });
 
@@ -117,8 +122,8 @@ jobs:
             // Download and save each changed file
             for (const file of changedFiles) {
               const { data: fileContent } = await github.rest.repos.getContent({
-                owner: repoOwner,
-                repo: repoName,
+                owner: prRepoOwner,
+                repo: prRepoName,
                 path: file,
                 ref: branch,
               });
@@ -145,8 +150,8 @@ jobs:
             if (changedFiles.includes("src/main/resources/messages_en_GB.properties")) {
               console.log("Using PR branch reference file.");
               const { data: fileContent } = await github.rest.repos.getContent({
-                owner: repoOwner,
-                repo: repoName,
+                owner: prRepoOwner,
+                repo: prRepoName,
                 path: "src/main/resources/messages_en_GB.properties",
                 ref: branch,
               });
