--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -60,7 +60,7 @@ jobs:
           echo "Fetching PR changed files..."
 
           echo "${{ github.event.pull_request.head.repo.owner.login }}"
-          core.setOutput("pr_repo_owner", "${{ github.event.pull_request.head.repo.owner.login }}");
+          core.setOutput("pr_repo_owner", ${{ github.event.pull_request.head.repo.owner.login }});
 
           echo "${{ github.event.pull_request.head.repo.name }}"
           core.setOutput("pr_repo_name", ${{ github.event.pull_request.head.repo.name }}");
