--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -59,11 +59,7 @@ jobs:
         run: |
           echo "Fetching PR changed files..."
 
-          echo "${{ github.event.pull_request.head.repo.owner.login }}"
-
-          echo "${{ github.event.pull_request.head.repo.name }}"
-
-          gh repo view "${{ github.event.pull_request.head.repo.full_name }}" --branch "${{ steps.get-pr-data.outputs.branch }}"
+          # gh repo view "${{ github.event.pull_request.head.repo.full_name }}" --branch "${{ steps.get-pr-data.outputs.branch }}"
 
           # gh repo set-default "${{ github.event.pull_request.head.repo.full_name }}" # Set the fork repository as default
 
@@ -76,6 +72,9 @@ jobs:
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
+            const fs = require("fs");
+            const path = require("path");
+
             const prNumber = ${{ steps.get-pr-data.outputs.pr_number }};
             const repoOwner = "${{ steps.get-pr-data.outputs.repo_owner }}";
             const repoName = "${{ steps.get-pr-data.outputs.repo_name }}";
@@ -113,8 +112,8 @@ jobs:
 
             // Create a temporary directory for PR files
             const tempDir = "pr-branch";
-            if (!require("fs").existsSync(tempDir)) {
-              require("fs").mkdirSync(tempDir, { recursive: true });
+            if (!fs.existsSync(tempDir)) {
+              fs.mkdirSync(tempDir, { recursive: true });
             }
 
             // Download and save each changed file
@@ -127,14 +126,14 @@ jobs:
               });
 
               const content = Buffer.from(fileContent.content, "base64").toString("utf-8");
-              const filePath = `${tempDir}/${file}`;
-              const dirPath = require("path").dirname(filePath);
+              const filePath = path.join(tempDir, file);
+              const dirPath = path.dirname(filePath);
 
-              if (!require("fs").existsSync(dirPath)) {
-                require("fs").mkdirSync(dirPath, { recursive: true });
+              if (!fs.existsSync(dirPath)) {
+                fs.mkdirSync(dirPath, { recursive: true });
               }
 
-              require("fs").writeFileSync(filePath, content);
+              fs.writeFileSync(filePath, content);
               console.log(`Saved file: ${filePath}`);
             }
 
@@ -156,7 +155,7 @@ jobs:
 
               referenceFilePath = "pr-branch-messages_en_GB.properties";
               const content = Buffer.from(fileContent.content, "base64").toString("utf-8");
-              require("fs").writeFileSync(referenceFilePath, content);
+              fs.writeFileSync(referenceFilePath, content);
             } else {
               console.log("Using main branch reference file.");
               const { data: fileContent } = await github.rest.repos.getContent({
@@ -168,7 +167,7 @@ jobs:
 
               referenceFilePath = "main-branch-messages_en_GB.properties";
               const content = Buffer.from(fileContent.content, "base64").toString("utf-8");
-              require("fs").writeFileSync(referenceFilePath, content);
+              fs.writeFileSync(referenceFilePath, content);
             }
 
             console.log(`Reference file path: ${referenceFilePath}`);
