--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -126,6 +126,7 @@ jobs:
               });
 
               const content = Buffer.from(fileContent.content, "base64").toString("utf-8");
+              console.log(content)
               const filePath = path.join(tempDir, file);
               const dirPath = path.dirname(filePath);
 
